// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/view_image/popover_bar/PopoverBar should match snapshot with public links disabled 1`] = `
<div
  className="modal-button-bar"
  data-testid="fileCountFooter"
>
  <div
    className="modal-column text"
  >
    <span
      className="modal-bar-file-count"
    >
      <FormattedMessage
        defaultMessage="File {count, number} of {total, number}"
        id="view_image_popover.file"
        values={
          Object {
            "count": 1,
            "total": 0,
          }
        }
      />
    </span>
  </div>
  <div
    className="modal-column text"
  >
    <span
      className="modal-bar-links"
    >
      <a
        className="text"
        download=""
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <FormattedMessage
          defaultMessage="Download"
          id="view_image_popover.download"
        />
      </a>
    </span>
  </div>
</div>
`;

exports[`components/view_image/popover_bar/PopoverBar should match snapshot with public links enabled 1`] = `
<div
  className="modal-button-bar"
  data-testid="fileCountFooter"
>
  <div
    className="modal-column text"
  >
    <span
      className="modal-bar-file-count"
    >
      <FormattedMessage
        defaultMessage="File {count, number} of {total, number}"
        id="view_image_popover.file"
        values={
          Object {
            "count": 1,
            "total": 0,
          }
        }
      />
    </span>
  </div>
  <div
    className="modal-column text"
  >
    <span
      className="modal-bar-links"
    >
      <span>
        <a
          className="public-link text"
          data-title="Public Image"
          href="#"
        >
          <FormattedMessage
            defaultMessage="Get a public link"
            id="view_image_popover.publicLink"
          />
        </a>
        <span
          className="text"
        >
           | 
        </span>
      </span>
      <a
        className="text"
        download=""
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <FormattedMessage
          defaultMessage="Download"
          id="view_image_popover.download"
        />
      </a>
    </span>
  </div>
</div>
`;

exports[`components/view_image/popover_bar/PopoverBar should match snapshot with zoom controls enabled 1`] = `
<div
  className="modal-button-bar"
  data-testid="fileCountFooter"
>
  <div
    className="modal-column text"
  >
    <span
      className="modal-bar-file-count"
    >
      <FormattedMessage
        defaultMessage="File {count, number} of {total, number}"
        id="view_image_popover.file"
        values={
          Object {
            "count": 1,
            "total": 0,
          }
        }
      />
    </span>
  </div>
  <div
    className="modal-column"
  >
    <OverlayTrigger
      defaultOverlayShown={false}
      delayShow={400}
      key="zoomOut"
      overlay={
        <Tooltip
          bsClass="tooltip"
          id="zoom-out-icon-tooltip"
          placement="right"
        >
          <FormattedMessage
            defaultMessage="Zoom Out"
            id="view_image.zoom_out"
          />
        </Tooltip>
      }
      placement="top"
      trigger={
        Array [
          "hover",
          "focus",
        ]
      }
    >
      <span
        className="btn-inactive"
      >
        <i
          className="icon icon-minus"
        />
      </span>
    </OverlayTrigger>
    <OverlayTrigger
      defaultOverlayShown={false}
      delayShow={400}
      key="zoomReset"
      overlay={
        <Tooltip
          bsClass="tooltip"
          id="zoom-reset-icon-tooltip"
          placement="right"
        >
          <FormattedMessage
            defaultMessage="Reset Zoom"
            id="view_image.zoom_reset"
          />
        </Tooltip>
      }
      placement="top"
      trigger={
        Array [
          "hover",
          "focus",
        ]
      }
    >
      <span
        className="btn-inactive"
      >
        <i
          className="icon icon-magnify-minus"
        />
      </span>
    </OverlayTrigger>
    <OverlayTrigger
      defaultOverlayShown={false}
      delayShow={400}
      key="zoomIn"
      overlay={
        <Tooltip
          bsClass="tooltip"
          id="zoom-in-icon-tooltip"
          placement="right"
        >
          <FormattedMessage
            defaultMessage="Zoom In"
            id="view_image.zoom_in"
          />
        </Tooltip>
      }
      placement="top"
      trigger={
        Array [
          "hover",
          "focus",
        ]
      }
    >
      <span
        className="btn-inactive"
      >
        <i
          className="icon icon-plus"
        />
      </span>
    </OverlayTrigger>
  </div>
  <div
    className="modal-column text"
  >
    <span
      className="modal-bar-links"
    >
      <a
        className="text"
        download=""
        href=""
        rel="noopener noreferrer"
        target="_blank"
      >
        <FormattedMessage
          defaultMessage="Download"
          id="view_image_popover.download"
        />
      </a>
    </span>
  </div>
</div>
`;
